# dioxide

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  COVERAGE.md  COVERAGE_ANALYSIS.md  Cargo.toml  DX_EVALUATION.md  MLP_VALIDATION_REPORT.md  PROJECT_CLEANUP_REPORT.md  README.md  RELEASE.md  ROADMAP.md  STATUS.md  codecov.yml  llms.txt  pyproject.toml  tox.ini
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: auto-close-issues.yml  build.yml  ci.yml  deploy-demos.yml  issue-metrics.yml  issue-triage.yml  python-ci.yml  release-automated.yml  release.yml  rust-ci.yml  stale-issues.yml
benchmarks/: compare_di_frameworks.py
demos/: README.md  demo.html  index.html  styles.css
demos/decorator-usage/: adapters_prod.py  adapters_test.py  demo.sh  index.html  ports.py  run_prod.py  run_test.py  service.py
demos/migration-tool/: demo.sh  index.html  migration_diff.py  test_v2_app.py  v1_app.py  v2_app.py
demos/mock-to-fake/: demo.sh  index.html
demos/narration-scripts/: decorator-usage.md  migration-tool.md  mock-to-fake.md  rust-correctness.md  scan-performance.md  template.md
demos/recordings/: decorator-usage.cast  decorator-usage_timing.json  migration-tool.cast  migration-tool_timing.json  mock-to-fake.cast  mock-to-fake_timing.json  rust-correctness.cast  rust-correctness_timing.json  scan-performance.cast  scan-performance_timing.json
demos/rust-correctness/: circular_dep.py  correct_wiring.py  demo.sh  index.html  missing_binding.py
demos/scan-performance/: demo.sh  eager_scan.py  index.html  lazy_scan.py
demos/scripts/: build-demo.py  combine-video-audio.sh  generate-narration.py  record-demo.sh
docs/: DEVELOPER_EXPERIENCE.md  DOCUMENT_AUDIT.md  DX_VISION.md  GITHUB_PROJECT_SETUP.md  MLP_VISION.md  PM_GITHUB_AUDIT.md  PM_PHASE_4_SUMMARY.md  PROJECT_MANAGEMENT_GUIDE.md  SPRINT_READY.md  TESTING_GUIDE.md  cicd-modernization-plan.md  conf.py  design-principles.md  index.md  index.rst  migration-from-dependency-injector.rst  migration-from-mocks.md  migration-v1-to-v2.md  navigation.md  philosophy.md  stability-policy.md  why-dioxide.md
docs/autoapi/: index.rst
docs/cookbook/: configuration.md  database.md  fastapi.md  index.md  libraries.md  testing.md
docs/design/: ADR-001-container-architecture.md  ADR-002-pyo3-binding-strategy.md  ADR-003-rust-backend-decision.md  ADR-lifecycle-evaluation.md  REQUEST_SCOPE_ERGONOMICS.md  bdd-workflow.md  spike-data-pipeline-testing.md
docs/development/: changelog.rst  contributing.rst
docs/examples/: 02-email-service-with-profiles.rst  03-multi-tier-application.rst  04-lifecycle-management.rst  basic_example.rst  fastapi_integration.rst  testing_patterns.rst
docs/guides/: choosing-decorators.md  configuration.md  debugging.md  decorator-order.md  request-scoping.md  (+3 more)
examples/: README.md  getting_started_example.py  hexagonal_architecture.py
examples/migrations/from-dependency-injector/after/: pyproject.toml
examples/migrations/from-dependency-injector/after/app/: __init__.py  adapters.py  main.py  ports.py  services.py
examples/migrations/from-dependency-injector/after/tests/: conftest.py  test_services.py
examples/migrations/from-dependency-injector/before/: pyproject.toml
examples/migrations/from-dependency-injector/before/app/: __init__.py  adapters.py  container.py  main.py  ports.py  services.py
examples/migrations/from-dependency-injector/before/tests/: __init__.py  test_services.py
examples/migrations/from-injector/before/: pyproject.toml
examples/migrations/from-injector/before/app/: __init__.py  adapters.py  main.py  modules.py  ports.py  services.py
examples/migrations/from-injector/before/tests/: __init__.py  test_services.py
examples/patterns/caching/: README.md  pyproject.toml  requirements-dev.txt
examples/patterns/caching/app/: __init__.py  main.py
examples/patterns/caching/app/adapters/: __init__.py  caching.py  fakes.py  postgres.py  redis.py
examples/patterns/caching/app/domain/: __init__.py  models.py  ports.py  services.py
examples/patterns/caching/tests/: __init__.py  conftest.py  test_caching.py
features/: api-ergonomics.feature  api-stability.feature  basic_container.feature  component-decorator.feature  container-scan.feature  dependency-injection.feature  environment.py  fakes-philosophy-docs.feature  manual-registration.feature  provider_registration.feature  rust-backend-benchmarks.feature  scan-performance.feature  singleton-caching.feature  type-safety.feature
scripts/: assign_milestones.sh  setup_labels.sh  validate_wheels.py
tests/: __init__.py  conftest.py  smoke_test.py  test_abc_detection.py  test_adapter.py  test_adapter_scope.py  test_adversarial_primitives.py  test_async_lifecycle.py  test_auto_scan.py  test_celery_integration.py  test_click_integration.py  test_component.py  test_config_injection.py  test_container.py  test_container_lifecycle.py  test_container_repr.py  test_container_reset.py  test_container_scan.py  test_decorator_misuse.py  test_decorator_order.py  test_deprecation.py  test_deprecation_infra.py  test_descriptive_errors.py  test_django_integration.py  test_documentation_version.py  test_drf_integration.py  test_error_messages.py  test_exception_docs_url.py  test_fastapi_integration.py  test_flask_integration.py  test_gauntlet_adversarial_qa.py  test_global_container.py  test_integration_hexagonal.py  test_introspection.py  test_introspection_bug_hunting.py  test_lazy_scanning.py  test_lifecycle_caching.py  test_lifecycle_decorator.py  test_lifecycle_disposal_e2e.py  test_lifecycle_docs_examples.py  (+23 more)
(+193 files in other folders)
