[package]
name = "rivet-di"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"

[lib]
name = "_rivet_core"
path = "rust/src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py311"] }
petgraph = "0.6"
thiserror = "1.0"

[dev-dependencies]
