[project]
name = "dioxide-caching-example"
version = "0.1.0"
description = "Caching adapter pattern example using dioxide"
requires-python = ">=3.11"
dependencies = [
    "dioxide>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
python_classes = ["Describe*", "Test*"]
python_functions = ["it_*", "test_*"]
testpaths = ["tests"]
