[project]
name = "di-migration-before"
version = "0.1.0"
description = "Example using dependency-injector (before migration)"
requires-python = ">=3.11"
dependencies = [
    "dependency-injector>=4.41.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
